--- a/app.json
+++ b/app.json
@@ -123,7 +123,7 @@
       "formation": {
           "worker": {
               "quantity": 1,
-              "size": "Basic"
+              "size": "Eco"
           }
       },
       "stack": "container"
